--- a/view/adminhtml/layout/blog_category_index.xml
+++ b/view/adminhtml/layout/blog_category_index.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <update handle="styles"/>
     <body>
         <referenceContainer name="content">
-            <block class="Magento\Backend\Block\Template" template="Nofarius1992_Blog::categories.phtml"/>
+            <uiComponent name="nofarius1992_blog_category_listing"/>
         </referenceContainer>
     </body>
 </page>
